# kquickitemviews

./: CMakeLists.txt  kquickview.json
cmake/: KQuickItemViewsConfig.cmake.in
src/: abstractquickview.cpp  abstractquickview.h  abstractquickview_p.h  abstractselectableview.cpp  abstractselectableview.h  abstractselectableview_p.h  abstractviewcompat.cpp  abstractviewcompat.h  abstractviewitem.cpp  abstractviewitem.h  abstractviewitem_p.h  bindedcombobox.cpp  bindedcombobox.h  contextadapterfactory.cpp  contextadapterfactory.h  contextmanager.cpp  contextmanager.h  delegatechoice.cpp  delegatechoice.h  delegatechooser.cpp  delegatechooser.h  flickablescrollbar.cpp  flickablescrollbar.h  flickableview.cpp  flickableview.h  geometrycache_p.cpp  geometrycache_p.h  hierarchyview.cpp  hierarchyview.h  indexmetadata_p.cpp  indexmetadata_p.h  modeladapter.cpp  modeladapter.h  modelscrolladapter.cpp  modelscrolladapter.h  pixmapwrapper.cpp  pixmapwrapper.h  plugin.cpp  plugin.h  qmodelindexbinder.cpp  (+34 more)
src/adapters/: abstractitemadapter.cpp  abstractitemadapter.h  abstractitemadapter_p.h  contextadapter.h  decorationadapter.cpp  decorationadapter.h  geometryadapter.cpp  geometryadapter.h  loadingadapter.h  modeladapter.cpp  modeladapter.h  scrollbaradapter.cpp  scrollbaradapter.h  selectionadapter.cpp  selectionadapter.h  viewportadapter.cpp  viewportadapter.h
src/extensions/: contextextension.h
src/private/: geostrategyselector_p.cpp  geostrategyselector_p.h  geoutils_p.h  indexmetadata_p.cpp  indexmetadata_p.h  runtimetests_p.cpp  runtimetests_p.h  selectionadapter_p.h  treestructure_p.cpp  treetraversalreflector_p.cpp  treetraversalreflector_p.h  treetraversalreflector_p2.h  viewport_p.h
src/private/statetracker/: content_p.cpp  content_p.h  continuity_p.cpp  continuity_p.h  geometry_p.cpp  geometry_p.h  index_p.cpp  index_p.h  model_p.cpp  model_p.h  modelitem_p.cpp  modelitem_p.h  proximity_p.cpp  proximity_p.h  selection_p.cpp  selection_p.h  viewitem_p.h
src/proxies/: sizehintproxymodel.cpp  sizehintproxymodel.h
src/strategies/: aheadoftime.cpp  aheadoftime.h  delegate.cpp  delegate.h  justintime.cpp  justintime.h  proxy.cpp  proxy.h  role.cpp  role.h  uniform.cpp  uniform.h
src/views/: comboboxview.cpp  comboboxview.h  flickable.cpp  flickable.h  hierarchyview.cpp  hierarchyview.h  indexview.cpp  indexview.h  listview.cpp  listview.h  sizehintview.cpp  sizehintview.h  treeview.cpp  treeview.h
tests/: CMakeLists.txt  freefloatingmodel.cpp  freefloatingmodel.h  modeltest.qml  modelviewtester.cpp  modelviewtester.h  testmain.cpp
